# my-radkit-dev-journey

./: .gitignore  README.md  SETUP.md  pyproject.toml
Client API examples/: 001-enroll-client.py  01-authentication-connection.ipynb  02-connect-to-my-service.ipynb  03-structure-manage-scripts.ipynb  04-execute-commands-on-devices.ipynb  05-parse-outputs-with-genie.ipynb  06-file-transfer.ipynb  07-snmp-and-netconf.ipynb
Control API examples/: 01-manage-users.ipynb  02-manage-devices.ipynb  03-manage-labels.ipynb  04-manage-admins.ipynb  05-manage-roles.ipynb
